[gd_scene load_steps=3 format=2]

[ext_resource path="res://Reused/AnimalFriendMaker/Nodes/AnimalFriendMaker/Editor/PathButton/PathButton.gd" type="Script" id=1]
[ext_resource path="res://Reused/AnimalFriendMaker/Resource/Image/Arrow.png" type="Texture" id=2]

[node name="PathButton" type="Control"]
margin_right = 129.0
margin_bottom = 50.0
rect_min_size = Vector2( 129, 50 )
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 129.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Default name"
align = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ArrowTexture" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_left = 133.0
margin_right = 143.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 50 )
texture = ExtResource( 2 )
stretch_mode = 4

[connection signal="resized" from="HBoxContainer" to="." method="_on_HBoxContainer_resized"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
